--- a/StudentDB-GUI/MainWindow.xaml
+++ b/StudentDB-GUI/MainWindow.xaml
@@ -3,10 +3,143 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         xmlns:local="clr-namespace:StudentDB_GUI"
+        xmlns:system="clr-namespace:System;assembly=mscorlib"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
-    <Grid>
-        
+        Title="MainWindow" Height="350" Width="525" MaxHeight="350" MaxWidth="525">
+    <Grid Background="#ecf0f1">
+        <materialDesign:DialogHost  Name="EnrollStudent"  Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+            <materialDesign:DialogHost.DialogContent>
+                <StackPanel >
+                    <StackPanel Margin="16">
+                        <TextBox  materialDesign:HintAssist.Hint="Student ID"  Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="0 8 0 0" HorizontalAlignment="Left" Width="200" x:Name="StudentIDTextBox" />
+                        <TextBox  materialDesign:HintAssist.Hint="Student Name"  Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="0 8 0 0" HorizontalAlignment="Left" Width="200" x:Name="StudentNameTextBox" />
+                        <TextBox  materialDesign:HintAssist.Hint="Student Grade"  Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="0 8 0 0" HorizontalAlignment="Left" Width="200" x:Name="StudentGradeTextBox" />
+                        <ComboBox materialDesign:HintAssist.Hint="Student Section"  
+                                     Style="{StaticResource MaterialDesignFloatingHintComboBox}" 
+                                     Margin="0 8 0 0" HorizontalAlignment="Left"  Width="200" 
+                                     x:Name="StudentSectionComboBox" 
+                                     IsEditable="True" >
+                            <ComboBoxItem>First Section</ComboBoxItem>
+                            <ComboBoxItem>Second Section</ComboBoxItem>
+                        </ComboBox>
+                    </StackPanel>
+                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" >
+                        <Button Style="{StaticResource MaterialDesignFlatButton}"
+                                    IsDefault="True"
+                                    Margin="0 8 8 0"
+                                    >
+                            <Button.CommandParameter>
+                                <system:Boolean>True</system:Boolean>
+                            </Button.CommandParameter>
+                            SUBMIT
+                        </Button>
+                        <Button Style="{StaticResource MaterialDesignFlatButton}"
+                                        IsCancel="True"
+                                        Margin="0 8 0 0"
+                                        Command="materialDesign:DialogHost.CloseDialogCommand">
+                            <Button.CommandParameter>
+                                <system:Boolean>False</system:Boolean>
+                            </Button.CommandParameter>
+                            CANCEL
+                        </Button>
+                    </StackPanel>
+                </StackPanel>
+
+            </materialDesign:DialogHost.DialogContent>
+            <Grid>
+            <Grid.ColumnDefinitions>
+            <ColumnDefinition />
+            <ColumnDefinition />
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="50"/>
+            <RowDefinition Height="50"/>
+            <RowDefinition Height="50"/>
+            <RowDefinition Height="50"/>
+            <RowDefinition Height="50"/>
+            <RowDefinition Height="50"/>
+        </Grid.RowDefinitions>
+        <StackPanel Orientation="Horizontal" Grid.Row="0" Grid.ColumnSpan="2" Background="White">
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="125 10 0 0">
+            <TextBox Grid.Column="0" 
+                         materialDesign:HintAssist.Hint="Search For Student" 
+                         materialDesign:HintAssist.HintOpacity="0.4"
+                         materialDesign:TextFieldAssist.DecorationVisibility="Hidden" 
+                         BorderThickness="0"
+                         MinWidth="250" VerticalAlignment="Center"
+                         Foreground="Black"/>
+            <Button Style="{DynamicResource MaterialDesignToolButton}" Grid.Column="1">
+                <materialDesign:PackIcon Kind="Magnify" Opacity=".56" />
+            </Button>
+            </StackPanel>
+        </StackPanel>
+        <StackPanel Grid.Row="1">
+        <Button   
+             Command="{x:Static materialDesign:DialogHost.OpenDialogCommand}"
+        Style="{StaticResource MaterialDesignRaisedButton}"
+        VerticalAlignment="Center"
+         Width="140"
+         Margin="0 15 0 0">
+            Enroll Student
+        </Button>
+        </StackPanel>
+        <StackPanel Grid.Row="2">
+            <Button    
+        Style="{StaticResource MaterialDesignRaisedButton}"
+        VerticalAlignment="Center"
+         Width="140"
+         Margin="0 15 0 0">
+                Delete Student
+            </Button>
+        </StackPanel>
+        <StackPanel Grid.Row="3">
+            <Button    
+        Style="{StaticResource MaterialDesignRaisedButton}"
+        VerticalAlignment="Center"
+         Width="140"
+         Margin="0 15 0 0" >
+               Sava DataBase 
+            </Button>
+        </StackPanel>
+        <StackPanel Grid.Row="4">
+            <Button    
+        Style="{StaticResource MaterialDesignRaisedButton}"
+        VerticalAlignment="Center"
+         Width="140"
+         Margin="0 15 0 0">
+                Update Student
+            </Button>
+        </StackPanel>
+        <StackPanel Grid.Row="1" Grid.Column="1">
+            <Button    
+        Style="{StaticResource MaterialDesignRaisedButton}"
+        VerticalAlignment="Center"
+         Width="140" 
+         Margin="0 15 0 0" >
+                Open DataBase
+            </Button>
+        </StackPanel>
+        <StackPanel Grid.Row="2" Grid.Column="1">
+            <Button    
+        Style="{StaticResource MaterialDesignRaisedButton}"
+        VerticalAlignment="Center"
+         Width="140" 
+         Margin="0 15 0 0" >
+                Top 5 Students
+            </Button>
+        </StackPanel>
+        <StackPanel Grid.Row="3" Grid.Column="1">
+            <Button    
+        Style="{StaticResource MaterialDesignRaisedButton}"
+        VerticalAlignment="Center"
+         Width="140" 
+         Margin="0 15 0 0" >
+               Generate Section
+            </Button>
+        </StackPanel>
+    </Grid>
+        </materialDesign:DialogHost>
     </Grid>
 </Window>
