--- a/StudentDB-GUI/MainWindow.xaml
+++ b/StudentDB-GUI/MainWindow.xaml
@@ -9,45 +9,7 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525" MaxHeight="350" MaxWidth="525">
     <Grid Background="#ecf0f1">
-        <materialDesign:DialogHost  Name="EnrollStudent"  Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
-            <materialDesign:DialogHost.DialogContent>
-                <StackPanel >
-                    <StackPanel Margin="16">
-                        <TextBox  materialDesign:HintAssist.Hint="Student ID"  Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="0 8 0 0" HorizontalAlignment="Left" Width="200" x:Name="StudentIDTextBox" />
-                        <TextBox  materialDesign:HintAssist.Hint="Student Name"  Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="0 8 0 0" HorizontalAlignment="Left" Width="200" x:Name="StudentNameTextBox" />
-                        <TextBox  materialDesign:HintAssist.Hint="Student Grade"  Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="0 8 0 0" HorizontalAlignment="Left" Width="200" x:Name="StudentGradeTextBox" />
-                        <ComboBox materialDesign:HintAssist.Hint="Student Section"  
-                                     Style="{StaticResource MaterialDesignFloatingHintComboBox}" 
-                                     Margin="0 8 0 0" HorizontalAlignment="Left"  Width="200" 
-                                     x:Name="StudentSectionComboBox" 
-                                     IsEditable="True" >
-                            <ComboBoxItem>First Section</ComboBoxItem>
-                            <ComboBoxItem>Second Section</ComboBoxItem>
-                        </ComboBox>
-                    </StackPanel>
-                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" >
-                        <Button Style="{StaticResource MaterialDesignFlatButton}"
-                                    IsDefault="True"
-                                    Margin="0 8 8 0"
-                                    >
-                            <Button.CommandParameter>
-                                <system:Boolean>True</system:Boolean>
-                            </Button.CommandParameter>
-                            SUBMIT
-                        </Button>
-                        <Button Style="{StaticResource MaterialDesignFlatButton}"
-                                        IsCancel="True"
-                                        Margin="0 8 0 0"
-                                        Command="materialDesign:DialogHost.CloseDialogCommand">
-                            <Button.CommandParameter>
-                                <system:Boolean>False</system:Boolean>
-                            </Button.CommandParameter>
-                            CANCEL
-                        </Button>
-                    </StackPanel>
-                </StackPanel>
-
-            </materialDesign:DialogHost.DialogContent>
+        <materialDesign:DialogHost  Name="RootDialog"  Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
             <Grid>
             <Grid.ColumnDefinitions>
             <ColumnDefinition />
@@ -77,48 +39,205 @@
         </StackPanel>
         <StackPanel Grid.Row="1">
         <Button   
-             Command="{x:Static materialDesign:DialogHost.OpenDialogCommand}"
-        Style="{StaticResource MaterialDesignRaisedButton}"
-        VerticalAlignment="Center"
-         Width="140"
-         Margin="0 15 0 0">
+            Command="{x:Static materialDesign:DialogHost.OpenDialogCommand}"
+            Style="{StaticResource MaterialDesignRaisedButton}"
+            VerticalAlignment="Center"
+            Width="140"
+            Margin="0 15 0 0">
+                        <Button.CommandParameter>
+                            <StackPanel>
+                                <StackPanel Margin="16">
+                                    <TextBox  materialDesign:HintAssist.Hint="Student ID"  Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="0 8 0 0" HorizontalAlignment="Left" Width="200" x:Name="StudentIDTextBox" />
+                                    <TextBox  materialDesign:HintAssist.Hint="Student Name"  Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="0 8 0 0" HorizontalAlignment="Left" Width="200" x:Name="StudentNameTextBox" />
+                                    <TextBox  materialDesign:HintAssist.Hint="Student Grade"  Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="0 8 0 0" HorizontalAlignment="Left" Width="200" x:Name="StudentGradeTextBox" />
+                                    <ComboBox materialDesign:HintAssist.Hint="Student Section"  
+                                     Style="{StaticResource MaterialDesignFloatingHintComboBox}" 
+                                     Margin="0 8 0 0" HorizontalAlignment="Left"  Width="200" 
+                                     x:Name="StudentSectionComboBox" 
+                                     IsEditable="True" >
+                                        <ComboBoxItem>1</ComboBoxItem>
+                                        <ComboBoxItem>2</ComboBoxItem>
+                                    </ComboBox>
+                                </StackPanel>
+                                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" >
+                                    <Button Style="{StaticResource MaterialDesignFlatButton}"
+                                    IsDefault="True"
+                                    Command="{x:Static materialDesign:DialogHost.CloseDialogCommand}"
+                                    Click="Enroll"
+                                    Margin="0 8 8 0"
+                                    >
+                                        SUBMIT
+                                    </Button>
+                                    <Button Style="{StaticResource MaterialDesignFlatButton}"
+                                        IsCancel="True"
+                                        Margin="0 8 0 0"
+                                        Command="materialDesign:DialogHost.CloseDialogCommand">
+                                        <Button.CommandParameter>
+                                            <system:Boolean>False</system:Boolean>
+                                        </Button.CommandParameter>
+                                        CANCEL
+                                    </Button>
+                                </StackPanel>
+                            </StackPanel>
+                        </Button.CommandParameter>
             Enroll Student
         </Button>
         </StackPanel>
         <StackPanel Grid.Row="2">
             <Button    
+         Command="{x:Static materialDesign:DialogHost.OpenDialogCommand}"
         Style="{StaticResource MaterialDesignRaisedButton}"
         VerticalAlignment="Center"
          Width="140"
          Margin="0 15 0 0">
-                Delete Student
+                        <Button.CommandParameter>
+                            <StackPanel>
+                                <StackPanel Margin="16">
+                                    <TextBox  materialDesign:HintAssist.Hint="Student ID"  Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="0 8 0 0" HorizontalAlignment="Left" Width="200" x:Name="DeleteStudentIDTextBox" />
+                                </StackPanel>
+                                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" >
+                                    <Button Style="{StaticResource MaterialDesignFlatButton}"
+                                    IsDefault="True"
+                                    Margin="0 8 8 0"
+                                    Command="{x:Static materialDesign:DialogHost.CloseDialogCommand}"
+                                    Click="Delete"
+                                    >
+                                        <Button.CommandParameter>
+                                            <system:Boolean>True</system:Boolean>
+                                        </Button.CommandParameter>
+                                        SUBMIT
+                                    </Button>
+                                    <Button Style="{StaticResource MaterialDesignFlatButton}"
+                                        IsCancel="True"
+                                        Margin="0 8 0 0"
+                                        Command="materialDesign:DialogHost.CloseDialogCommand">
+                                        <Button.CommandParameter>
+                                            <system:Boolean>False</system:Boolean>
+                                        </Button.CommandParameter>
+                                        CANCEL
+                                    </Button>
+                                </StackPanel>
+                            </StackPanel>
+                        </Button.CommandParameter>
+                        Delete Student
             </Button>
         </StackPanel>
         <StackPanel Grid.Row="3">
-            <Button    
+            <Button 
+         Command="{x:Static materialDesign:DialogHost.OpenDialogCommand}"
         Style="{StaticResource MaterialDesignRaisedButton}"
         VerticalAlignment="Center"
          Width="140"
          Margin="0 15 0 0" >
-               Sava DataBase 
+                        <Button.CommandParameter>
+                            <StackPanel>
+                                <StackPanel Margin="16">
+                                    <TextBox  materialDesign:HintAssist.Hint="Database Key"  Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="0 8 0 0" HorizontalAlignment="Left" Width="200" x:Name="SaveDBKeyTextBox" />
+                                </StackPanel>
+                                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" >
+                                    <Button Style="{StaticResource MaterialDesignFlatButton}"
+                                    IsDefault="True"
+                                    Margin="0 8 8 0"
+                                    Command="{x:Static materialDesign:DialogHost.CloseDialogCommand}"
+                                    Click="Save"
+                                    >
+                                        <Button.CommandParameter>
+                                            <system:Boolean>True</system:Boolean>
+                                        </Button.CommandParameter>
+                                        SUBMIT
+                                    </Button>
+                                    <Button Style="{StaticResource MaterialDesignFlatButton}"
+                                        IsCancel="True"
+                                        Margin="0 8 0 0"
+                                        Command="materialDesign:DialogHost.CloseDialogCommand">
+                                        <Button.CommandParameter>
+                                            <system:Boolean>False</system:Boolean>
+                                        </Button.CommandParameter>
+                                        CANCEL
+                                    </Button>
+                                </StackPanel>
+                            </StackPanel>
+                        </Button.CommandParameter>
+                        Sava DataBase 
             </Button>
         </StackPanel>
         <StackPanel Grid.Row="4">
             <Button    
+         Command="{x:Static materialDesign:DialogHost.OpenDialogCommand}"
         Style="{StaticResource MaterialDesignRaisedButton}"
         VerticalAlignment="Center"
          Width="140"
          Margin="0 15 0 0">
-                Update Student
+                        <Button.CommandParameter>
+                            <StackPanel>
+                                <StackPanel Margin="16">
+                                    <TextBox  materialDesign:HintAssist.Hint="Student ID"  Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="0 8 0 0" HorizontalAlignment="Left" Width="200" x:Name="StudentUpdateIDTextBox" />
+                                    <TextBox  materialDesign:HintAssist.Hint="New Grade"  Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="0 8 0 0" HorizontalAlignment="Left" Width="200" x:Name="StudentUpdateGradeTextBox" />
+                                </StackPanel>
+                                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" >
+                                    <Button Style="{StaticResource MaterialDesignFlatButton}"
+                                    IsDefault="True"
+                                    Margin="0 8 8 0"
+                                    Command="{x:Static materialDesign:DialogHost.CloseDialogCommand}"
+                                    Click="Update"
+                                    >
+                                        <Button.CommandParameter>
+                                            <system:Boolean>True</system:Boolean>
+                                        </Button.CommandParameter>
+                                        SUBMIT
+                                    </Button>
+                                    <Button Style="{StaticResource MaterialDesignFlatButton}"
+                                        IsCancel="True"
+                                        Margin="0 8 0 0"
+                                        Command="materialDesign:DialogHost.CloseDialogCommand">
+                                        <Button.CommandParameter>
+                                            <system:Boolean>False</system:Boolean>
+                                        </Button.CommandParameter>
+                                        CANCEL
+                                    </Button>
+                                </StackPanel>
+                            </StackPanel>
+                        </Button.CommandParameter>
+                        Update Student
             </Button>
         </StackPanel>
         <StackPanel Grid.Row="1" Grid.Column="1">
             <Button    
+        Command="{x:Static materialDesign:DialogHost.OpenDialogCommand}"
         Style="{StaticResource MaterialDesignRaisedButton}"
         VerticalAlignment="Center"
          Width="140" 
          Margin="0 15 0 0" >
-                Open DataBase
+                        <Button.CommandParameter>
+                            <StackPanel>
+                                <StackPanel Margin="16">
+                                    <TextBox  materialDesign:HintAssist.Hint="DataBase Key"  Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="0 8 0 0" HorizontalAlignment="Left" Width="200" x:Name="StudentDBKeyTextBox" />
+                                </StackPanel>
+                                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" >
+                                    <Button Style="{StaticResource MaterialDesignFlatButton}"
+                                    IsDefault="True"
+                                    Margin="0 8 8 0"
+                                    Command="{x:Static materialDesign:DialogHost.CloseDialogCommand}"
+                                    Click="Open"
+                                    >
+                                        <Button.CommandParameter>
+                                            <system:Boolean>True</system:Boolean>
+                                        </Button.CommandParameter>
+                                        SUBMIT
+                                    </Button>
+                                    <Button Style="{StaticResource MaterialDesignFlatButton}"
+                                        IsCancel="True"
+                                        Margin="0 8 0 0"
+                                        Command="materialDesign:DialogHost.CloseDialogCommand">
+                                        <Button.CommandParameter>
+                                            <system:Boolean>False</system:Boolean>
+                                        </Button.CommandParameter>
+                                        CANCEL
+                                    </Button>
+                                </StackPanel>
+                            </StackPanel>
+                        </Button.CommandParameter>
+                        Open DataBase
             </Button>
         </StackPanel>
         <StackPanel Grid.Row="2" Grid.Column="1">
@@ -126,17 +245,55 @@
         Style="{StaticResource MaterialDesignRaisedButton}"
         VerticalAlignment="Center"
          Width="140" 
+         Click="Top5"
          Margin="0 15 0 0" >
                 Top 5 Students
             </Button>
         </StackPanel>
         <StackPanel Grid.Row="3" Grid.Column="1">
             <Button    
+        Command="{x:Static materialDesign:DialogHost.OpenDialogCommand}"
         Style="{StaticResource MaterialDesignRaisedButton}"
         VerticalAlignment="Center"
          Width="140" 
          Margin="0 15 0 0" >
-               Generate Section
+                        <Button.CommandParameter>
+                            <StackPanel>
+                                <StackPanel Margin="16">
+                                    <ComboBox materialDesign:HintAssist.Hint="Student Section"  
+                                     Style="{StaticResource MaterialDesignFloatingHintComboBox}" 
+                                     Margin="0 8 0 0" HorizontalAlignment="Left"  Width="200" 
+                                     x:Name="GenerateSectionComboBox" 
+                                     IsEditable="True" >
+                                        <ComboBoxItem>1</ComboBoxItem>
+                                        <ComboBoxItem>2</ComboBoxItem>
+                                    </ComboBox>
+                                </StackPanel>
+                                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" >
+                                    <Button Style="{StaticResource MaterialDesignFlatButton}"
+                                    IsDefault="True"
+                                    Margin="0 8 8 0"
+                                    Command="{x:Static materialDesign:DialogHost.CloseDialogCommand}"
+                                    Click="GenerateSection"
+                                    >
+                                        <Button.CommandParameter>
+                                            <system:Boolean>True</system:Boolean>
+                                        </Button.CommandParameter>
+                                        SUBMIT
+                                    </Button>
+                                    <Button Style="{StaticResource MaterialDesignFlatButton}"
+                                        IsCancel="True"
+                                        Margin="0 8 0 0"
+                                        Command="materialDesign:DialogHost.CloseDialogCommand">
+                                        <Button.CommandParameter>
+                                            <system:Boolean>False</system:Boolean>
+                                        </Button.CommandParameter>
+                                        CANCEL
+                                    </Button>
+                                </StackPanel>
+                            </StackPanel>
+                        </Button.CommandParameter>
+                        Generate Section
             </Button>
         </StackPanel>
     </Grid>
